
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <groupId>de.fiz.karlsruhe</groupId>
    <artifactId>testCargoSelenium</artifactId>
    <version>1.0-SNAPSHOT</version>
    <packaging>war</packaging>
    
    <properties>
        <webdriver.chrome>/home/cst/google/chromedriver</webdriver.chrome>
        <escidoc.installer.config>escidoc-core-installer-config.xml</escidoc.installer.config>
        
        <escidoc.server.host>localhost</escidoc.server.host>
        <escidoc.server.port>8080</escidoc.server.port>
        
        <fedora.admin.user>fedoraAdmin</fedora.admin.user>
        <fedora.admin.password>fedoraAdmin</fedora.admin.password>
        <fcrepo.version>3.4.2</fcrepo.version>
        
        <!--<cargo.jvmargs>-Xdebug -Xrunjdwp:transport=dt_socket,address=8787,server=y,suspend=n -Xmx1224m -Xms312m -XX:MaxPermSize=320m</cargo.jvmargs>-->
        <cargo.jvmargs>-Xmx1224m -Xms312m -XX:MaxPermSize=320m</cargo.jvmargs>
        <cargo.jvmdebug></cargo.jvmdebug>
        <cargo.ucldebug></cargo.ucldebug>
        <cargo.wait>false</cargo.wait>
    </properties>
    
    <!-- Build Configuration -->
    <build>
        <finalName>testCargoSelenium</finalName>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-resources-plugin</artifactId>
                <executions>
                    <execution>
                        <id>copy-filtered-resources</id>
                        <phase>prepare-package</phase>
                        <goals>
                            <goal>copy-resources</goal>
                        </goals>
                        <configuration>
                            <outputDirectory>${project.build.directory}</outputDirectory>
                            <resources>
                                <resource>
                                    <directory>${basedir}/src/test/resources</directory>
                                    <filtering>true</filtering>
                                    <excludes>
                                        <exclude>escidoc.properties</exclude>
                                    </excludes>
                                </resource>
                            </resources>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-dependency-plugin</artifactId>
                <executions>
                    <execution>
                        <id>copy-installer</id>
                        <phase>pre-integration-test</phase>
                        <goals>
                            <goal>copy</goal>
                        </goals>
                        <configuration>
                            <skip>false</skip>
                            <artifactItems>
                                <artifactItem>
                                    <groupId>org.escidoc.core</groupId>
                                    <artifactId>installer</artifactId>
                                    <version>1.4.2-SNAPSHOT</version>
                                    <type>jar</type>
                                    <overWrite>false</overWrite>
                                    <outputDirectory>${installer.location}</outputDirectory>
                                    <destFileName>escidoc-installer.jar</destFileName>
                                </artifactItem>
                            </artifactItems>
                            <overWriteReleases>false</overWriteReleases>
                            <overWriteSnapshots>true</overWriteSnapshots>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.codehaus.mojo</groupId>
                <artifactId>exec-maven-plugin</artifactId>
                <version>1.2.1</version>
                <configuration>
                    <skip>${skipITs}</skip>
                </configuration>
                <executions>
                    <execution>
                        <id>install-escidoc-core</id>
                        <phase>pre-integration-test</phase>
                        <goals>
                            <goal>exec</goal>
                        </goals>
                        <configuration>
                            <executable>java</executable>
                            <arguments>
                                <argument>-Dskip.validation=true</argument>
                                <argument>-jar</argument>
                                <argument>${project.build.directory}/dependency/escidoc-installer.jar</argument>
                                <argument>${project.build.directory}/${escidoc.installer.config}</argument>
                            </arguments>
                            <outputFile>${project.build.directory}/escidoc-installer.log
                            </outputFile>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.codehaus.cargo</groupId>
                <artifactId>cargo-maven2-plugin</artifactId>
                <version>1.2.2</version>
                <executions>
                    <execution>
                        <id>start-container</id>
                        <phase>pre-integration-test</phase>
                        <goals>
                            <goal>start</goal>
                        </goals>
                        <configuration>
                            <wait>false</wait>
                        </configuration>
                    </execution>
                    <execution>
                        <id>stop-container</id>
                        <phase>post-integration-test</phase>
                        <goals>
                            <goal>stop</goal>
                        </goals>
                        <configuration>
                            <skip>true</skip>
                        </configuration>
                    </execution>
                </executions>
                <configuration>
                    <skip>${skipITs}</skip>
                    <wait>${cargo.wait}</wait>
                    <container>
                        <containerId>jboss42x</containerId>
                        <home>${project.build.directory}/escidoc/jboss</home>
                        <timeout>600000</timeout>
                    </container>

                    <configuration>
                        <type>standalone</type>
                        <properties>
                            <cargo.hostname>localhost</cargo.hostname>
                            <cargo.protocol>http</cargo.protocol>
                            <cargo.servlet.port>${escidoc.server.port}</cargo.servlet.port>
                            <cargo.rmi.port>1099</cargo.rmi.port>
                            <cargo.logging>medium</cargo.logging>
                            <cargo.runtime.args>-b 0.0.0.0</cargo.runtime.args>
                            <cargo.jvmargs>${cargo.jvmargs} ${cargo.jvmdebug} ${cargo.ucldebug}</cargo.jvmargs>
                        </properties>
                        <deployables>
                            <deployable>
                                <groupId>org.escidoc</groupId>
                                <artifactId>browser</artifactId>
                                <type>war</type>
                                <properties>
                                    <context>browser</context>
                                </properties>
                            </deployable>
                        </deployables>
                    </configuration>
                </configuration>
            </plugin>
            
            <!-- ******************************************************* -->
            <!-- Start selenium-server before the integration test start -->
            <plugin>
                <groupId>org.codehaus.mojo</groupId>
                <artifactId>selenium-maven-plugin</artifactId>
                <version>2.3</version>
                <executions>
                    <execution>
                        <id>xvfb</id>
                        <phase>pre-integration-test</phase>
                        <goals>
                            <goal>xvfb</goal>
                        </goals>
                    </execution>
            
                    <execution>
                        <id>selenium</id>
                        <phase>pre-integration-test</phase>
                        <goals>
                            <goal>start-server</goal>
                        </goals>
                        <configuration>
                            <port>8888</port>
                            <multiWindow>true</multiWindow>
                            <background>true</background>
                            <proxyHost>proxy.fiz-karlsruhe.de</proxyHost>
                            <proxyPort>8888</proxyPort>
                            <display>:20</display>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
            <!--
            <plugin>
                <groupId>org.codehaus.mojo</groupId>
                <artifactId>selenium-maven-plugin</artifactId>
                <executions>
                    <execution>
                        <id>start-selenium-server</id>
                        <phase>pre-integration-test</phase>
                        <goals>
                            <goal>start-server</goal>
                        </goals>
                        <configuration>
                            <port>8888</port>
                            <browser>*firefox</browser>
                            <background>true</background>
                            <logOutput>true</logOutput>
                            <multiWindow>true</multiWindow>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
            -->

            <!-- ******************************************************** -->
            <!-- Force to run the testcases in the integration-test phase -->
            <!-- ******************************************************** -->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <configuration>
                    <!-- Skip the normal tests, we'll run them in the integration-test phase -->
                    <skip>true</skip>
                </configuration>
                <executions>
                    <execution>
                        <phase>integration-test</phase>
                        <goals>
                            <goal>test</goal>
                        </goals>
                        <configuration>
                            <systemPropertyVariables>
                                <webdriver.chrome.driver>${webdriver.chrome}</webdriver.chrome.driver>
                            </systemPropertyVariables>
                            <redirectTestOutputToFile>true</redirectTestOutputToFile>
                            <skip>false</skip>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
            
            <!-- *********************************************************** -->
            <!-- Deploy the war in the embedded jetty of cargo2-maven-plugin -->
            <!-- *********************************************************** -->
            <!--
            <plugin>
                <groupId>org.codehaus.cargo</groupId>
                <artifactId>cargo-maven2-plugin</artifactId>
                <version>1.3.0</version>
                <executions>
                    <execution>
                        <id>start-container</id>
                        <phase>pre-integration-test</phase>
                        <goals>
                            <goal>start</goal>
                        </goals>
                    </execution>
                    <execution>
                        <id>stop-container</id>
                        <phase>post-integration-test</phase>
                        <goals>
                            <goal>stop</goal>
                        </goals>
                    </execution>
                </executions>
                <configuration>
                    <container>
                        <containerId>jetty7x</containerId>
                        <type>embedded</type>                       
                    </container>
                    <configuration>
                        <properties>
                            <cargo.servlet.port>7070</cargo.servlet.port>
                            <cargo.logging>high</cargo.logging>
                        </properties>
                    </configuration>
                    <deployables>
                        <deployable>
                            <groupId>de.fiz.karlsruhe</groupId>
                            <type>war</type>
                            <artifactId>testCargoSelenium</artifactId>
                            <properties>
                                <context>/testCargoSelenium</context>
                            </properties>
                        </deployable>
                        <deployable>
                            <groupId>org.escidoc</groupId>
                            <artifactId>browser</artifactId>
                            <type>war</type>
                            <properties>
                                <context>/browser</context>
                            </properties>
                        </deployable>
                    </deployables>
                </configuration>
            </plugin>
            -->
			
            <!-- ******************************************************************************* -->
            <!-- Configure maven-compiler-plugin (Not related to the Selenium Maven integration) -->
            <!-- ******************************************************************************* -->
            <plugin>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>2.1</version>
                <configuration>
                    <source>1.6</source>
                    <target>1.6</target>
                    <optimize>true</optimize>
                </configuration>
            </plugin>
        </plugins>
    </build>
	
    <!-- Dependencies -->
    <dependencies>
        <dependency>
            <groupId>log4j</groupId>
            <artifactId>log4j</artifactId>
            <version>1.2.17</version>
            <scope>provided</scope>
        </dependency>
        
        <dependency>
            <groupId>org.seleniumhq.selenium.client-drivers</groupId>
            <artifactId>selenium-java-client-driver</artifactId>
            <version>1.0.2</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.seleniumhq.selenium</groupId>
            <artifactId>selenium-htmlunit-driver</artifactId>
            <version>2.25.0</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.seleniumhq.selenium</groupId>
            <artifactId>selenium-server</artifactId>
            <version>2.25.0</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>junit</groupId>
            <artifactId>junit</artifactId>
            <version>4.8.1</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.escidoc</groupId>
            <artifactId>browser</artifactId>
            <version>0.4.8-SNAPSHOT</version>
            <type>war</type>
        </dependency>
    </dependencies>
</project>
